<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goods_redactor_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/no_args_transition"
    tools:context=".ui.screens.goods_redactor.GoodsRedactorFragment">

    <ImageView
        android:id="@+id/iv_goods"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_name"
        style="@style/RedactorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/backend_redactor_hint_name"
        android:theme="@style/RedactorText"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_goods"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_price"
        style="@style/RedactorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/backend_redactor_hint_price"
        android:theme="@style/RedactorText"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:singleLine="true"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_quantity"
        style="@style/RedactorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/backend_redactor_hint_quantity"
        android:theme="@style/RedactorText"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_price"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_quantity"
            android:singleLine="true"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="@dimen/action_btn_height"
        android:layout_margin="16dp"
        android:text="@string/btn_redactor_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>